# OpenVarioFront

./: .autotools  .cproject  .gitignore  .gitmodules  .project  COPYING  ChangeLog  Makefile.am  README  README.md  configure.ac  doxygen.cfg
src/: ExceptionBase.cpp  ExceptionBase.h  Makefile.am  OVFCommon.h  OpenVarioFront.cpp  OpenVarioFront.logger.properties  sysEGLWindow.h
src/GLES/: EGLRenderSurface.cpp  EGLRenderSurface.h  ExceptionBase.cpp  ExceptionBase.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  Makefile.am  SDLRenderSurface.cpp  SDLRenderSurface.h  VecMat.cpp  VecMat.h  sysEGLWindow.h  sysSDLWindow.h
src/GLES/Mali_fbdev/: sysEGLWindow.cpp
src/GLES/SDL/: sysSDLWindow.cpp
src/GLES/TexHelper/: Makefile.am  PngReader.cpp  PngReader.h  TextureData.cpp  TextureData.h
src/GLES/X11/: sysEGLWindow.cpp
src/GLPrograms/: GLProgBase.cpp  GLProgBase.h  GLProgDiffLightTexture.cpp  GLProgDiffLightTexture.h  GLProgDiffuseLight.cpp  GLProgDiffuseLight.h  Makefile.am
src/GLTextRender/: GLTextFontCache.cpp  GLTextFontCache.h  GLTextFontTexture.cpp  GLTextFontTexture.h  GLTextGlobals.cpp  GLTextGlobals.h  GLTextPangoCPPWrappers.cpp  GLTextPangoCPPWrappers.h  GLTextRenderer.cpp  GLTextRenderer.h  Makefile.am  PangoGLTextRender.cpp  PangoGLTextRender.h
src/Renderers/: AnalogHandRenderer.cpp  AnalogHandRenderer.h  Makefile.am  RendererBase.cpp  RendererBase.h  SquareTextureRenderer.cpp  SquareTextureRenderer.h
src/X11/: sysEGLWindow.cpp
